--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,6 +11,10 @@
   <%= f.label :photo %><br />
   <%= f.text_field :photo, autocomplete: "photo" %>
   </div>
+  <div class="field">
+<%= f.label :name %><br />
+<%= f.text_field :name, autocomplete: "gatihijo" %>
+</div>
 
   <div class="field">
     <%= f.label :email %><br />
