--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,28 @@
 <p style="color: green"><%= notice %></p>
 
 <%= render @article %>
+<%= render 'comments/form' %>
+<%= render 'comments/article_comments' %>
+<%= render 'comments/form', comment: @comment %>
+
 
 <div>
   <%= link_to "Edit this article", edit_article_path(@article) %> |
   <%= link_to "Back to articles", articles_path %>
 
   <%= button_to "Destroy this article", @article, method: :delete %>
+  <p style="color: green"><%= notice %></p>
+<%= render @article %>
+<div>
+<%= link_to "Edit this article", edit_article_path(@article) %> |
+<%= link_to "Back to articles", articles_path %>
+<%= button_to "Destroy this article", @article, method: :delete %>
+<% Article::Kinds.each do |kind| %>
+<%= button_to "#{Article::KindsSpanish[kind]}",
+new_user_reaction_path(article_id: @article.id, reaction_type:
+"article", kind: kind), method: :post %>
+<% end %>
 </div>
+</div>
+
+
